Menu and Images are changed

--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -1,4 +1,4 @@
-.app__chef-content {
+/* .app__chef-content {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -50,4 +50,4 @@
     .app__chef-sign img {
         width: 80%;
     }
-}
+} */
