--- a/src/pages/MenuMore/menu.css
+++ b/src/pages/MenuMore/menu.css
@@ -1,3 +1,6 @@
+/* Mobile-first approach */
+
+/* Common styles for menu and categories */
 .app__menu {
     flex-direction: column;
     background: var(--color-black);
@@ -11,18 +14,15 @@
 .app__menu-categories {
     width: 100%;
     margin: 2rem 0;
-
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: flex-start;
-    flex-direction: row;
 }
 
 .app__menu-category {
     flex: 1;
-    width: 100%;
-    flex-direction: column;
-    margin: 0 1rem;
+    width: calc(50% - 2rem);
+    margin: 1rem;
     padding: 2rem;
     border-radius: 8px;
     background-color: var(--color-black);
@@ -32,19 +32,23 @@
 .app__menu-category-heading {
     font-family: var(--font-base);
     font-weight: 600;
-    font-size: 45px;
-    line-height: 58.5px;
+    font-size: 3rem;
+    line-height: 1.2;
     letter-spacing: 0.04em;
     color: var(--color-white);
+    text-align: center;
 }
 
 .app__menu-items {
     display: flex;
     flex-direction: column;
-    margin: 2rem 2rem;
+    margin: 1rem 0;
     width: 100%;
 }
-/* Add additional styling as per your design */
-.kabobizer{
-    display: flex;
+
+/* Responsive adjustments */
+@media screen and (max-width: 768px) {
+    .app__menu-category {
+        width: calc(100% - 2rem);
+    }
 }
