--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -15,6 +15,47 @@
 .app__header-img img {
     width: 80%;
 }
+.doordash{
+  width: 300px;
+}
+.ubereats{
+  width: 300px;
+}
+
+.app__wrapper_info {
+  text-align: center; 
+}
+
+
+.heading {
+  margin-bottom: 10px; 
+}
+
+.custom__button {
+  margin-top: 20px;
+}
+
+/* Your existing styles */
+.app__wrapper_info {
+  /* Your existing styles */
+  text-align: center; /* Align content within .app__wrapper_info to center */
+  opacity: 0;
+  animation-name: fadeInAnimation;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  border-radius: 10px;
+}
+
+@keyframes fadeInAnimation {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 @media screen and (min-width: 2000px) {
     .app__header-h1 {
