--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,13 @@
   --font-base: 'Cormorant Upright', serif;
   --font-alt: 'Open Sans', sans-serif;
   
-  --color-golden: #DCCA87;
+  --color-golden: #F1DD38;
   --color-black: #0C0C0C;
   --color-gray: #545454;
   --color-crimson: #F5EFDB;
   --color-grey: #AAAAAA;
-  --color-white: #FFFFFF;
+  --color-black: #000000;
+  --color-white: #ffffff;
 }
 
 * {
