--- a/src/pages/MenuMore/menu.css
+++ b/src/pages/MenuMore/menu.css
@@ -52,3 +52,119 @@
         width: calc(100% - 2rem);
     }
 }
+/* CSS for Tandoori Chicken Wings images */
+.app__menu-category:nth-child(7) .images .category-image img {
+  height: 10rem; /* Adjust the height as needed */
+  width: auto; /* Adjust the width accordingly */
+  transition: transform 0.3s ease-in-out;
+  object-fit: cover;
+}
+
+.app__menu-category:nth-child(7) .images .category-image:hover {
+  transform: scale(1.1);
+}
+.images{
+    display: flex;
+}
+
+.category-image {
+  margin: 0.5rem;
+  overflow: hidden;
+  border-radius: 50%;
+  position: relative;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+.category-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+  object-fit: revert-layer;
+}
+
+.category-image:hover {
+  transform: scale(1.1);
+}
+
+/* Add these styles to your existing CSS file (e.g., menu.css) */
+
+/* Modal styles */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.plattersimages {
+  margin-bottom: 0rem;
+  display: flex;
+  justify-content: center;
+}
+
+.plattersimages .images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.plattersimages img {
+  height: 14rem;
+  margin-bottom: -1rem;
+  object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+  object-fit: revert-layer;
+}
+
+.modal-content {
+  position: relative;
+  background-color: black;
+  border-radius: 8px;
+  max-width: 80%;
+  max-height: 80%;
+  overflow: auto;
+  text-align: center;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: black;
+  margin-right: 1rem;
+  margin-top: 1rem;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Add other existing styles below */
+/* ... */
+
+.enlarged-image {
+  animation: imageZoom 0.5s ease-in-out;
+  height: 45rem;
+
+}
+
+@keyframes imageZoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
