--- a/src/pages/ContactUs/contactus.css
+++ b/src/pages/ContactUs/contactus.css
@@ -11,7 +11,7 @@
 
 .app__wrapper_info__contact {
   flex: 1;
-  width: 100%;
+  width: 90%;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -24,6 +24,39 @@
   display: flex;
   justify-content: center;
   align-items: center;
-margin-right: 3rem;
+  margin-right: 3rem;
   margin-left: 2rem;
+}
+
+@media screen and (max-width: 1150px) {
+  .contact {
+    flex-direction: column;
+  }
+
+  .app__wrapper_img__contact {
+    order: 3; /* Change the order to display the map at the bottom */
+    margin-top: 1rem; /* Adjust margin as needed */
+    width: 86%;
+    margin-bottom: 3rem;
+  }
+}
+/* Default styles for the map */
+.app__wrapper_img__contact #map {
+  width: 100%;
+  height: 400px; 
+}
+
+/* Media query for smaller screens */
+@media screen and (max-width: 1150px) {
+  .app__wrapper_img__contact #map {
+    height: 300px;
+  }
+}
+
+/* Media query for even smaller screens */
+@media screen and (max-width: 650px) {
+  .app__wrapper_img__contact #map {
+    height: 200px; 
+    margin-top: 3.9rem;
+  }
 }
